--- a/bjcp.ipynb
+++ b/bjcp.ipynb
@@ -7,16 +7,10 @@
    "source": [
     "# Clustering Beer Styles\n",
     "\n",
-    "Using BJCP 2021 Guidelines with additional OpenAI embeddings computed per sections (overall impression, aroma, ...) and vectorized vital statistics."
+    "Using BJCP 2021 Guidelines with additional OpenAI embeddings computed per sections (overall impression, aroma, flavor, mouthfeel...) and vectorized vital statistics.\n",
+    "\n",
+    "Let's try to create new group styles using the overall impression descriptions."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "423cdfca-fe16-4a84-82a0-6a9e5cf1246f",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -62,6 +56,14 @@
    "metadata": {},
    "source": [
     "### Kmeans"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cf39c2dd-2c5e-429b-b85a-491db09a9ce5",
+   "metadata": {},
+   "source": [
+    "Use Kmeans to create 5 clusters"
    ]
   },
   {
@@ -130,16 +132,16 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c7092bf4-3410-47d2-a228-889e2f74ebe9",
+   "cell_type": "markdown",
+   "id": "122cd6b7-713d-47ec-a836-b706dcf63a3d",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Try to view few sample of each cluster"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 14,
    "id": "f9fb42bb-1787-4306-9c0a-ee21b8d5da90",
    "metadata": {
     "tags": []
@@ -151,95 +153,95 @@
      "text": [
       "Cluster 0 Theme: \n",
       "27B, Historical Beer: Kentucky Common\n",
-      "A clean, dry, refreshing, slightly malty dark beer with high carbonation. Mild-tasting, with light toast and caramel flavors, served very fresh as a sessionable saloon beer.\n",
+      "Low to medium grainy, corn-like, or sweet maltiness with a low toast, biscuity-grainy, bready, or caramel malt accent. Medium to moderately-low hop aroma, usually floral or spicy in character. Clean fermentation profile, with possible faint berry ester. Low levels of DMS optional. No sourness. Malt-forward in the balance.\n",
       "\n",
       "16A, Sweet Stout\n",
-      "A very dark, sweet, full-bodied, slightly roasty stout that can suggest coffee-and-cream, or sweetened espresso.\n",
+      "Mild roasted grain aroma, sometimes with coffee or chocolate notes. An impression of cream-like sweetness often exists. Fruitiness can be low to moderately high. Low diacetyl optional. Low floral or earthy hop aroma optional.\n",
       "\n",
       "20A, American Porter\n",
-      "A malty, bitter, and often somewhat hoppy dark beer with a balanced, roasted, and frequently chocolatey character.\n",
+      "Medium-light to medium-strong roast aroma, often with a chocolate, light coffee, or lightly burnt character, sometimes with a background caramel or toffee sweetness, or a malty richness. The resiny, earthy, or floral hop character can vary from low to high. Moderate fruity esters optional. Should not seem sharp, acrid, or acidic. The malt-hop balance can vary, but it should always have a roasted malt aroma.\n",
       "\n",
       "16C, Tropical Stout\n",
-      "A very dark, sweet, fruity, moderately strong stout with smooth, roasty flavors, yet no burnt harshness.\n",
+      "Moderate to high intensity sweetness is prominent. Moderate to high coffee or chocolate roasty aroma, but not burnt. Medium to high fruitiness. May have a molasses, licorice, burnt sugar, dried fruit, or vinous aromatics. Stronger versions can have a subtle, clean aroma of alcohol. Low hop aroma optional. Low diacetyl optional.\n",
       "\n",
       "13C, English Porter\n",
-      "A moderate-strength dark brown English ale with a restrained roasty, bitter character. May have a range of roasted flavors, generally without burnt qualities, and often has a malty chocolate and caramel profile.\n",
+      "Moderate to moderately low bready, biscuity, and toasty malt aroma with mild roastiness, often like chocolate. Additional malt complexity may be present as caramel, nuts, toffee sweetness. May have up to a moderate level of floral or earthy hops. Moderate fruity esters optional, but desirable. Low diacetyl optional.\n",
       "\n",
       "\n",
       "\n",
       "----------------------------------------------------------------------------------------------------\n",
       "Cluster 1 Theme: \n",
       "10A, Weissbier\n",
-      "A pale, refreshing, lightly-hopped German wheat beer with high carbonation, dry finish, fluffy mouthfeel, and a distinctive banana-and-clove weizen yeast fermentation profile.\n",
+      "Moderate to strong esters and phenols, typically banana and clove, often well balanced and typically stronger than the malt. Light to moderate bready, doughy, or grainy wheat aroma. Light vanilla optional. Light floral, spicy, or herbal hops optional. Bubblegum (strawberry with banana), sourness, or smoke are faults.\n",
       "\n",
       "22D, Wheatwine\n",
-      "A richly textured, high alcohol sipping beer with a significant grainy, bready flavor, and a sleek body. The emphasis is first on the bready, wheaty flavors with malt, hops, fruity yeast, and alcohol complexity.\n",
+      "Hop aroma is mild and can represent just about any hop variety. Moderate to moderately-strong bready, wheaty malt character, often with additional malt complexity such as honey and caramel. A light, clean, alcohol aroma may be noted. Low to medium fruity notes may be apparent. Very low diacetyl optional. Banana-and-clove Weizen yeast character is inappropriate.\n",
       "\n",
       "1D, American Wheat Beer\n",
-      "A pale, refreshing grainy, doughy, or bready wheat beer with a clean fermentation profile and a variable hop character and bitterness. Its lighter body and higher carbonation contribute to its easy-drinking nature.\n",
+      "Low to moderate grainy, bready, or doughy wheat character. A light to moderate malty sweetness is acceptable. Moderate esters optional, usually a neutral profile; banana is inappropriate. Low to moderate citrusy, spicy, floral, or fruity hop aroma. Not typically dry-hopped. No clove phenols.\n",
       "\n",
       "27I, Historical Beer: Sahti\n",
-      "A sweet, heavy, strong traditional Finnish farmhouse beer usually with rye and juniper, and a banana-clove yeast character.\n",
+      "Sweet, worty malt impression. Grainy malt, caramel, and rye in background. Light alcohol aroma. High banana esters with moderate to moderately-high clove-like phenols. May have a low to moderate woody juniper character. Not sour. No hops.\n",
       "\n",
       "10B, Dunkles Weissbier\n",
-      "A moderately dark German wheat beer with a distinctive banana-and-clove weizen yeast fermentation profile, supported by a toasted bread or caramel malt flavor. Highly carbonated and refreshing, with a creamy, fluffy texture and light finish.\n",
+      "Moderate esters and phenols, typically banana and clove, often well balanced with each other and with the malt. Light to moderate bready, doughy, or grainy wheat aroma, often accompanied by caramel, bread crust, or richer malt notes. Low to moderate vanilla optional. Light floral, spicy, or herbal hops optional. Bubblegum (strawberry with banana), sourness, or smoke are faults.\n",
       "\n",
       "\n",
       "\n",
       "----------------------------------------------------------------------------------------------------\n",
       "Cluster 2 Theme: \n",
       "19A, American Amber Ale\n",
-      "An amber, hoppy, moderate-strength American craft beer with a malty caramel flavor. The balance can vary quite a bit, with some versions being fairly malty and others being aggressively hoppy. Hoppy and bitter versions should not have clashing flavors with the caramel malt profile.\n",
+      "Low to moderate hop aroma reflective of American or New World hop varieties (citrus, floral, pine, resin, spice, tropical fruit, stone fruit, berry, or melon). A citrusy hop character is common, but not required. Moderately-low to moderately-high maltiness, usually with a moderate caramel character, that can either support, balance, or sometimes mask the hop presentation. Esters vary from moderate to none.\n",
       "\n",
       "21B6, Specialty IPA: White IPA\n",
-      "A very pale, hop-forward American IPA variant with a bone-dry finish, very high carbonation, and a restrained bitterness level. Can be suggestive of a sparkling white wine or Champagne. The hop character is modern, and emphasizes flavor and aroma dimensions.\n",
+      "Moderately high to intense hop aroma, very bright and hop-forward in the balance. Modern American and New World hop varieties provide a wide range of possible characteristics, such as tropical, stone fruit, citrusy, or white grape, but not grassy, vegetal, or herbal. Malt is subtle, neutral, and in the background, but never caramelly or overly corny-sweet. A light, clean alcohol note is optional. Very clean fermentation character; should not be yeasty.\n",
       "\n",
       "5B, Kölsch\n",
-      "A subtle, brilliantly clear, pale beer with a delicate balance of malt, fruit, and hop character, moderate bitterness, and a well-attenuated but soft finish. Freshness makes a huge difference with this beer, as the delicate character can fade quickly with age.\n",
+      "Low to very low grainy-sweet malt aroma. A subtle fruit aroma (apple, pear, or sometimes cherry) is optional, but welcome. Low floral, spicy, or herbal hop aroma optional. The intensity of aromatics is fairly subtle but generally balanced, clean, fresh, and pleasant.\n",
       "\n",
       "X3, Italian Grape Ale\n",
-      "A sometimes refreshing, sometimes more complex Italian ale characterized by different varieties of grapes.\n",
+      "Aromatic characteristics of a particular grape have to be noticeable but do should not overpower the other aromas. The grape character should be pleasant and should not have defects such as oxidation. Malt character is usually restrained and should not exhibit a roasty, stout-like profile. Hop aroma (floral, earthy) can range from medium-low to absent. Some examples can have a low wild character described as barnyard, earthy, goaty but should not be as intense as in a lambic/fruit lambic. No diacetyl.\n",
       "\n",
       "21B1, Specialty IPA: Belgian IPA\n",
-      "A dry, hoppy IPA with fruitiness and spiciness of Belgian yeast. Often lighter in color and more attenuated, similar to a Belgian Tripel that has been brewed with more hops.\n",
+      "Moderate to high hop aroma, often reflecting the character of American or New World hops (tropical, melon, stone fruit, citrus, piney, etc.) or Continental hops (spicy, herbal, floral, etc.), possibly with a light dry-hop note. Gentle malt sweetness, sometimes with a sugary or honey character, but rarely caramel. Moderate to high esters, often pears, apples, citrus, or banana. Light spice, clove or pepper, optional. Light alcohol aroma optional.\n",
       "\n",
       "\n",
       "\n",
       "----------------------------------------------------------------------------------------------------\n",
       "Cluster 3 Theme: \n",
       "23A, Berliner Weisse\n",
-      "A very pale, refreshing, low-alcohol German wheat beer with a clean lactic sourness and a very high carbonation level. A light bread dough malt flavor supports the sourness, which shouldn’t seem artificial. A gentle fruitiness is found in the best examples.\n",
+      "A moderate to moderately-high sharply sour character is dominant. Can have up to a moderately fruitiness, often lemon, tart apple, peach, or apricot, and a light floral note. No hop aroma. The wheat may be perceived as raw bread dough in fresher versions; combined with the acidity, may suggest sourdough bread.\n",
       "\n",
       "23F, Fruit Lambic\n",
-      "A complex, refreshing, pleasantly sour Belgian wheat beer blending a complementary fermented fruit character with a sour, funky Gueuze.\n",
+      "The specified fruit should be the dominant aroma, blending well with similar aromatics as Gueuze (same description applies, but with the addition of a fermented fruit character).\n",
       "\n",
       "25C, Belgian Golden Strong Ale\n",
-      "A very pale, highly attenuated, strong Belgian ale that is more fruity and hoppy than spicy. Complex and delicate, the dry finish, light body, and high carbonation accentuate the yeast and hop character. Sparkling carbonation and effervescent, forming a rocky white head.\n",
+      "A complex bouquet of fruity esters, herbal hops, and peppery alcohol over a nearly neutral malt base. The esters are moderate to high, often pome fruit, especially pear. Hops are herbal, floral, or spicy, low to moderate. Alcohol and phenols often have a peppery or perfumy quality, low to moderate. Alcohol perception should be soft, not hot or solventy. Nearly neutral malt, possibly slightly grainy-sweet.\n",
       "\n",
       "23B, Flanders Red Ale\n",
-      "A sour and fruity oak-aged reddish-brown Belgian-style ale with supportive toasty malt flavors and fruit complexity. The dry, tannic finish supports the suggestion of a vintage red wine.\n",
+      "Complex fruity-sour profile with supporting malt. Fruitiness is high, and reminiscent of black cherries, oranges, plums, red currants, or fruit leather. Low to medium-low vanilla, chocolate, or peppery phenol can be present for complexity. The sour aroma ranges from moderate to high. A dominant vinegary character is inappropriate, although low to moderate levels of acetic acid are acceptable if balanced with the malt. No hop aroma.\n",
       "\n",
       "24B, Belgian Pale Ale\n",
-      "A top-fermented, all malt, average strength Belgian ale that is moderately bitter, not dry-hopped, and without strong flavors. The copper-colored beer lacks the aggressive yeast character or sourness of many Belgian beers, but has a well-balanced, malty, fruity, and often bready and toasty profile.\n",
+      "Moderate bready malt aroma, which can include toasty, biscuity, or nutty notes, possibly with a touch of light caramel or honey. Moderate to moderately high fruitiness complements the malt, and is suggestive of pear, orange, apple, or lemon, and sometimes of darker stone fruit like plums. Low to moderate spicy, herbal, or floral hop character. Low peppery, spicy phenols optional. The hop character is lower in balance than the malt and fruitiness.\n",
       "\n",
       "\n",
       "\n",
       "----------------------------------------------------------------------------------------------------\n",
       "Cluster 4 Theme: \n",
       "1A, American Light Lager\n",
-      "A highly carbonated, very light-bodied, nearly flavorless lager designed to be consumed very cold. Very refreshing and thirst-quenching.\n",
+      "Low malt aroma optional, but may be perceived as grainy, sweet, or corn-like, if present. Light spicy, floral, or herbal hop aroma optional. While a clean fermentation profile is desirable, a light amount of yeast character is not a fault.\n",
       "\n",
       "7A, Vienna Lager\n",
-      "A moderate-strength continental amber lager with a soft, smooth maltiness and a balanced, moderate bitterness, yet finishing relatively dry. The malt flavor is clean, bready-rich, and somewhat toasty, with an elegant impression derived from quality base malts and process, not specialty malts or adjuncts.\n",
+      "Moderately-intense malt aroma, with toasty and malty-rich accents. Floral, spicy hop aroma may be low to none. Clean lager character. A significant caramel, biscuity, or roasted aroma is inappropriate.\n",
       "\n",
       "6A, Märzen\n",
-      "An amber, malty German lager with a clean, rich, toasty, bready malt flavor, restrained bitterness, and a well-attenuated finish. The overall malt impression is soft, elegant, and complex, with a rich malty aftertaste that is never cloying or heavy.\n",
+      "Moderate malty aroma, typically rich, bready, somewhat toasty, with light bread crust notes. Clean lager fermentation character. Very low floral, herbal, or spicy hop aroma optional. Caramel-sweet, biscuity-dry, or roasted malt aromas are inappropriate. Very light alcohol might be detected, but should never be sharp. Clean, elegant malt richness should be the primary aroma.\n",
       "\n",
       "1B, American Lager\n",
-      "A very pale, highly-carbonated, light-bodied, well-attenuated lager with a very neutral flavor profile and low bitterness. Served very cold, it can be a very refreshing and thirst-quenching drink.\n",
+      "Low malt aroma optional, but may be perceived as grainy, sweet, or corn-like, if present. Light spicy or floral hop aroma optional. While a clean fermentation profile is desirable, a light amount of yeast character is not a fault.\n",
       "\n",
       "3C, Czech Amber Lager\n",
-      "A malty amber Czech lager with a hop character that can vary from low to quite significant. The malt flavors also can vary, leading to different interpretations and balances ranging from drier, bready, and slightly biscuity to sweeter and somewhat caramel-like.\n",
+      "Moderate intensity, rich malt aroma that can be either bready and Maillard product-dominant or slightly caramelly sweet. Spicy, floral, or herbal hop character may be moderate to none. Clean lager character, though low fruity esters (stone fruit or berries) may be present. Low diacetyl optional.\n",
       "\n",
       "\n",
       "\n",
@@ -259,6 +261,14 @@
     "        print(sample_cluster_rows.content.values[j], end=\"\\n\\n\")\n",
     "    print(\"\\n\")\n",
     "    print(\"-\" * 100)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4d231f5d-cc31-4c69-babb-1ecf07b89b7f",
+   "metadata": {},
+   "source": [
+    "Ask openai to describe each cluster"
    ]
   },
   {
